# strategy_ensemble

./: .gitignore  ALPHAS.md  CLAUDE.md  README.md  alphas.md  requirements.txt  sniper.md  sniper_v2.md  telegram_collector.session  사용설명서.md
config/: __init__.py  (+3 more)
quant_ensemble/: .gitignore  pyproject.toml
quant_ensemble/configs/: backtest.yaml  features.yaml  labels.yaml  live.yaml  universe.yaml
quant_ensemble/scripts/: generate_dummy_data.py  run_backtest.py  run_etl.py  train_models.py
quant_ensemble/src/: __init__.py
quant_ensemble/src/backtest/: __init__.py  engine.py  metrics.py  report.py  walkforward.py
quant_ensemble/src/common/: __init__.py  calendar.py  logging.py  types.py  utils.py
quant_ensemble/src/ensemble/: __init__.py  base.py  metalabel.py  moe.py  stacking.py
quant_ensemble/src/features/: __init__.py  asof_merge.py  build.py  normalize.py
quant_ensemble/src/ingestion/: __init__.py  fetch.py  validate.py
quant_ensemble/src/labels/: __init__.py  build.py  leakage.py
quant_ensemble/src/live/: __init__.py  broker.py  execution.py  monitoring.py  scheduler.py
quant_ensemble/src/portfolio/: __init__.py  allocator.py  constraints.py  costs.py  risk.py
quant_ensemble/src/signals/: __init__.py  base.py
quant_ensemble/src/signals/alphas/: __init__.py  microstructure.py  momentum.py  value.py  volatility.py
quant_ensemble/src/signals/models/: __init__.py
quant_ensemble/src/signals/models/momentum_nn/: __init__.py  infer.py  model.py  train.py
quant_ensemble/tests/: conftest.py  test_backtest.py  test_leakage.py  test_schema.py
(+221 files in other folders)
